Updated index.html and main.css

--- a/index.html
+++ b/index.html
@@ -71,11 +71,17 @@
         <!-- This section contains few images of the hotel -->
         <section class="pictures">
             <picture>
-                <img id="image1" src="Images/img2.jpg" alt="Image1" height="420" width="550"> <img id="image2" src="Images/img3.jpg" alt="Image2" height="200" width="300"> 
-                <img id="image2" src="Images/img1.jpg" alt="Image3" height="200" width="300"> <img id="image2" src="Images/img4.jpg" alt="Image4" height="200" width="300">  
-                <img id="image2" src="Images/image5.jpg" alt="Image5" height="200" width="300">
+                <img id="image1" src="Images/img2.jpg" alt="Image1" height="405" width="550"> 
+                <div>
+                    <img id="image2" src="Images/img3.jpg" alt="Image2" height="200" width="300"> 
+                    <img id="image2" src="Images/img1.jpg" alt="Image3" height="200" width="300"> 
+                </div>
+                <div>
+                    <img id="image2" src="Images/img4.jpg" alt="Image4" height="200" width="300">  
+                    <img id="image2" src="Images/image5.jpg" alt="Image5" height="200" width="300"> 
+                </div>
             </picture>
-            <button class="booknow" type="button">View all photos</button>
+            <button class="photos" type="button">View all photos</button>
             <hr>
         </section> 
         <!-- The below section contains the overview and the highlights of the Hotel -->
@@ -268,17 +274,17 @@
     
     <!-- Additional details along with contact information are given inside te footer tag-->
     <footer>
-        <div>
+        <div class="footer-color">
             <section class="subscribe">
-                <section>
-                    <h1>Subscribe</br>Newsletter</h1>
-                    <p id="travel">The Travel</p>
-                    <p>Get inspired! Receive travel discounts, tips and beind the scenes stories</p>
-                    <form method="get">
-                    <input placeholder="Your email address" name="email" type="email" class="email"> <button class="submit" type="submit">Subscribe</button>
-                    </form>
-                    <img src="Images/mailbox.jpg" alt="mailbox" height="200" width="300">
-                </section>
+                    <div>
+                        <h1>Subscribe</br>Newsletter</h1>
+                        <p id="travel">The Travel</p>
+                        <p>Get inspired! Receive travel discounts, tips and beind the scenes stories</p>
+                        <form method="get">
+                        <input placeholder="Your email address" name="email" type="email" class="email"> <button class="submit" type="submit">Subscribe</button>
+                        </form>
+                    </div>
+                    <div><img src="Images/mailbox.jpg" alt="mailbox" height="200" width="300"></div>
             </section> 
         </div>
          
