Updated index.html and main.css

--- a/index.html
+++ b/index.html
@@ -40,33 +40,34 @@
         <div class="pagebody">
         <!--The below section contains the basic information about the Hotel -->
         <section class="hotelInfo">
-            <ul>
-                <li class="path">
-                    <div><a href="">Turkey</a> <img id="arrow" src="assets/icons/chevron_forward.png" alt="Forward Arrow" height="12" width="12"><a href="">Istanbul</a> <img id="arrow" src="assets/icons/chevron_forward.png" alt="Forward Arrow" height="12" width="12"> </div>
-                    <a href=""><p>CVK Park Bosphorus Hotel Istanbul</p></a>
-                </li>
-                <li class="hotel-name">
-                    <p class="box"><b>CVK Park Bosphorus Hotel Istanbul</b></p>
-                </li>
-                <li class="rating">
-                    <div>
-                        <img src="assets/icons/Star.svg" alt="Star"><img src="assets/icons/Star.svg" alt="Star"><img src="assets/icons/Star.svg" alt="Star"><img src="assets/icons/Star.svg" alt="Star"><img src="assets/icons/Star.svg" alt="Star">
-                        5 Star Hotel
-                    </div>
-                </li>
-                <li class="location">
-                    <div><img src="assets/icons/Location.svg" alt="Location">Gumussuyu Mah. Inonu Cad. No:8, Istanbul 34437</div>
-                </li>   
-                <li class="reviews">
-                    <div class="review-item"><p>4.2</p></div>
-                    <div class="review-item"><strong>Very Good</strong> 375 reviews</div>
-                </li>
-            </ul>       
-        </section>
-        <!-- The below section contains the price along with book now button -->
-        <section class="details">
-            <p>$240<sub id="per">/night</sub></p>
-            <button class="feedback" type="button"><img src="assets/icons/heart1.svg" alt="Like"></button> <button class="feedback" type="button"><img src="assets/icons/Share.svg" alt="Share"></button> <button class="booknow" type="button">Book Now</button>
+            <section>
+                <ul>
+                    <li class="path">
+                        <div><a href="">Turkey</a> <img id="arrow" src="assets/icons/chevron_forward.png" alt="Forward Arrow" height="12" width="12"><a href="">Istanbul</a> <img id="arrow" src="assets/icons/chevron_forward.png" alt="Forward Arrow" height="12" width="12"> </div>
+                        <a href=""><p>CVK Park Bosphorus Hotel Istanbul</p></a>
+                    </li>
+                    <li class="hotel-name">
+                        <p class="box"><b>CVK Park Bosphorus Hotel Istanbul</b></p>
+                    </li>
+                    <li class="rating">
+                        <div>
+                            <img src="assets/icons/Star.svg" alt="Star"><img src="assets/icons/Star.svg" alt="Star"><img src="assets/icons/Star.svg" alt="Star"><img src="assets/icons/Star.svg" alt="Star"><img src="assets/icons/Star.svg" alt="Star">
+                            5 Star Hotel
+                        </div>
+                    </li>
+                    <li class="location">
+                        <div><img src="assets/icons/Location.svg" alt="Location">Gumussuyu Mah. Inonu Cad. No:8, Istanbul 34437</div>
+                    </li>   
+                    <li class="reviews">
+                        <div class="review-item"><p>4.2</p></div>
+                        <div class="review-item"><strong>Very Good</strong> 375 reviews</div>
+                    </li>
+                </ul>       
+            </section>
+            <section class="details">
+                <p>$240<sub>/night</sub></p>
+                <button class="feedback" type="button"><img src="assets/icons/heart1.svg" alt="Like"></button> <button class="feedback" type="button"><img src="assets/icons/Share.svg" alt="Share"></button> <button class="book" type="button">Book Now</button>
+            </section>
         </section>
         <!-- This section contains few images of the hotel -->
         <section class="pictures">
