Updated main.css with minor changes and alignments

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </ul>       
             </section>
             <section class="details">
-                <p>$240<sub>/night</sub></p>
+                <p><span>$240</span>/night</p>
                 <button class="feedback" type="button"><img src="assets/icons/heart1.svg" alt="Like"></button> <button class="feedback" type="button"><img src="assets/icons/Share.svg" alt="Share"></button> <button class="book" type="button">Book Now</button>
             </section>
         </section>
@@ -140,7 +140,7 @@
                     <div class="room-item">
                         <div class="item"><img src="Images/room1.jpg" alt="Room1" height="30" width="30">
                         <p class="roomdetails">Superior room - 1 double bed or 2 twin beds</p></div> 
-                        <div class="item"><p><b>$240</b><sub>/night</sub></p>
+                        <div class="item"><p><span>$240</span>/night</p>
                         <button type="button">Book now</button><br></div>
                     </div><hr>
                 </li>
@@ -148,15 +148,15 @@
                     <div class="room-item">
                         <div class="item"><img src="Images/room2.jpg" alt="Room2" height="30" width="30">
                         <p class="roomdetails">Superior room - City View - 1 double bed or 2 twin beds</p> </div>
-                        <div class="item"><p><b>$280</b><sub>/night</sub></p>
+                        <div class="item"><p><span>$280</span>/night</p>
                         <button type="button">Book now</button><br></div>
                     </div><hr>
-                </li>
+                </li>   
                 <li>
                     <div class="room-item">
                         <div class="item"><img src="Images/room3.jpg" alt="Room3" height="30" width="30">
                         <p class="roomdetails">Superior room - City View - 1 double bed or 2 twin beds</p></div> 
-                        <div class="item"><p><b>$320</b><sub>/night</sub></p>
+                        <div class="item"><p><span>$320</span>/night</p>
                         <button type="button">Book now</button><br></div>
                     </div><hr>
                 </li>
@@ -164,7 +164,7 @@
                     <div class="room-item">
                         <div class="item"><img src="Images/room4.jpg" alt="Room4" height="30" width="30">
                         <p class="roomdetails">Superior room - City View - 1 double bed or 2 twin beds</p> </div>
-                        <div class="item"><p><b>$350</b><sub>/night</sub></p>
+                        <div class="item"><p><span>$350</span>/night</p>
                         <button type="button">Book now</button><br></div>
                     </div>
                 </li>
@@ -175,7 +175,7 @@
         <!-- This section contains the location details about the hotel-->
         <section class="locationdetails">
             <section class="location-header"><h1>Location/Map</h1><button class="maps" type="button">View on google maps</button></br></section>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3009.555711364136!2d28.985829575746482!3d41.03497511778098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cab7f1fe239f43%3A0x54477a917ddd623d!2sCVK%20Park%20Bosphorus%20Hotel%20Istanbul!5e0!3m2!1sen!2sus!4v1696286342689!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3009.555711364136!2d28.985829575746482!3d41.03497511778098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cab7f1fe239f43%3A0x54477a917ddd623d!2sCVK%20Park%20Bosphorus%20Hotel%20Istanbul!5e0!3m2!1sen!2sus!4v1696286342689!5m2!1sen!2sus" width="600" height="450"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <div><img src="assets/icons/Location.svg" alt="Location">Gumussuyu Mah. Inonu Cad. No:8, Istanbul 34437</div>
             <hr>
         </section>
@@ -266,7 +266,7 @@
                     <div><img id="flag" src="assets/icons/Flag.svg" alt="Flag">   </div>            
                 </li><hr>
                 <div class="page-navigator">
-                    <button class="nextpage" type="button"><img src="assets/icons/chevron_back.png" alt="backward arrow" width="20px" height="20px"></button> 1 of 40 <button class="nextpage" type="button"><img src="assets/icons/chevron_forward.png" alt="backward arrow" width="20px" height="20px">
+                    <button class="backward" type="button"><img src="assets/icons/chevron_back.png" alt="backward arrow" width="20px" height="20px"></button><span> 1 of 40 </span><button class="forward" type="button"><img src="assets/icons/chevron_forward.png" alt="backward arrow" width="20px" height="20px">
                 </div>
             </ul>       
         </section>
