--- a/index.html
+++ b/index.html
@@ -244,31 +244,31 @@
                     <p>371 reviews</p></div>              
                 </li><hr>
                 <li class="userreview">
-                    <div><img src="Images/Omar.png" alt="user" width="30px" height="30px"></div>
+                    <div><img src="Images/Omar.png" alt="user" class="user1"></div>
                     <div><p><b>5.0 Amazing</b> | Omar Siphron</p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis laborum ullam voluptatibus ipsam dolores iure dolorem eos aliquam excepturi cum vel, accusantium in provident nam molestias ab quos? Repudiandae consectetur quisquam nam iure sit fugiat!</p></div>
                     <div><img id="flag" src="assets/icons/Flag.svg" alt="Flag"></div>              
                 </li><hr>
                 <li class="userreview">
-                    <div><img src="Images/Cristofer.png" alt="user" width="30px" height="30px"></div>
+                    <div><img src="Images/Cristofer.png" alt="user" class="user2"></div>
                     <div><p><b>5.0 Amazing</b> | Cristofer Ekstrom Bothman</p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis laborum ullam voluptatibus ipsam dolores iure dolorem eos aliquam excepturi cum vel, accusantium in provident nam molestias ab quos? Repudiandae consectetur quisquam nam iure sit fugiat!</p></div>
                     <div><img id="flag" src="assets/icons/Flag.svg" alt="Flag">   </div>            
                 </li><hr>
                 <li class="userreview">
-                    <div><img src="Images/Kaiya.png" alt="user" width="30px" height="30px"></div>
+                    <div><img src="Images/Kaiya.png" alt="user" class="user3"></div>
                     <div><p><b>5.0 Amazing</b> | Kaiya Lubin</p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis laborum ullam voluptatibus ipsam dolores iure dolorem eos aliquam excepturi cum vel, accusantium in provident nam molestias ab quos? Repudiandae consectetur quisquam nam iure sit fugiat!</p></div>
                     <div><img id="flag" src="assets/icons/Flag.svg" alt="Flag">   </div>            
                 </li><hr>
                 <li class="userreview">
-                    <div><img src="Images/Erin.png" alt="user" width="30px" height="30px"></div>
+                    <div><img src="Images/Erin.png" alt="user" class="user4"></div>
                     <div><p><b>5.0 Amazing</b> | Erin Septimus</p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis laborum ullam voluptatibus ipsam dolores iure dolorem eos aliquam excepturi cum vel, accusantium in provident nam molestias ab quos? Repudiandae consectetur quisquam nam iure sit fugiat!</p></div>
                     <div><img id="flag" src="assets/icons/Flag.svg" alt="Flag">   </div>            
                 </li><hr>
                 <li class="userreview">
-                    <div><img src="Images/John.png" alt="user" width="30px" height="30px" class="userimage"></div>
+                    <div><img src="Images/John.png" alt="user" class="user5"></div>
                     <div><p><b>5.0 Amazing</b> | Terry George</p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis laborum ullam voluptatibus ipsam dolores iure dolorem eos aliquam excepturi cum vel, accusantium in provident nam molestias ab quos? Repudiandae consectetur quisquam nam iure sit fugiat!</p></div>
                     <div><img id="flag" src="assets/icons/Flag.svg" alt="Flag">   </div>            
